# codex-manager

./: .gitignore  .runtime.env.example  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-04-28-tg-processing-message-design.md
scripts/: generate-icons.mjs  prepare-sidecar.mjs  run-bot.sh
src/: main.js  release-config.test.js  status.js  status.test.js  styles.css  window-drag.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_server.rs  bot_settings.rs  codex_provider.rs  config.rs  lib.rs  main.rs  startup_permissions.rs
