[package]
name = "codex-manager"
version = "0.1.3"
description = "CodexManager 菜单栏 App"
authors = ["zhangjinfeng"]
edition = "2021"
default-run = "codex-manager"

[lib]
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[[bin]]
name = "codex-manager"
path = "src/main.rs"

[[bin]]
name = "telegram-codex-bot"
path = "src/bin/telegram-codex-bot.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "6"
toml = "0.9"
